--- a/XamarinForms/MvpnTestFormsApp/MainPage.xaml
+++ b/XamarinForms/MvpnTestFormsApp/MainPage.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MvpnTestFormsApp.MainPage" Title="Mvpn Test Forms">
     <StackLayout>
-        <Label Text="URL:" FontAttributes="Bold" FontSize="Medium"/>
-        <Entry x:Name="urlEntry" Placeholder="Enter Test Server URL." />
-        <ActivityIndicator x:Name="activityIndicator" VerticalOptions="Center" HorizontalOptions="FillAndExpand" />
-        <Button Text="Start Tunnel" HorizontalOptions="FillAndExpand" Clicked="OnStartTunnel" />
-        <Button Text="Stop Tunnel" HorizontalOptions="FillAndExpand" Clicked="OnStopTunnel" />
-        <Button Text="Check Tunnel" HorizontalOptions="FillAndExpand" Clicked="OnCheckTunnel" />
-        <Button Text="WebView" HorizontalOptions="FillAndExpand" Clicked="OnWebView" />
-        <Button Text="HttpClient" HorizontalOptions="FillAndExpand" Clicked="OnHttpClient" />
+      <Label Text="URL:" FontAttributes="Bold" FontSize="Medium"/>
+      <Entry x:Name="urlEntry" Placeholder="Enter URL" />
+      <Label x:Name="stat" Text="Status" FontSize="Medium"/>
+      <ActivityIndicator x:Name="activityIndicator" VerticalOptions="Center" HorizontalOptions="FillAndExpand" />
+      <Button Text="Start Tunnel" BackgroundColor="#0D5778" TextColor="White" HorizontalOptions="FillAndExpand" Clicked="OnStartTunnel" />
+      <Button Text="Fetch" BackgroundColor="#0D5778" TextColor="White" HorizontalOptions="FillAndExpand" Clicked="OnHttpClient" />
+      <Button Text="Web View" BackgroundColor="#0D5778" TextColor="White" HorizontalOptions="FillAndExpand" Clicked="OnWebView" />
+      <Button Text="Tunnel Status" BackgroundColor="#0D5778" TextColor="White" HorizontalOptions="FillAndExpand" Clicked="OnCheckTunnel" />
+      <Button Text="Stop Tunnel" BackgroundColor="#0D5778" TextColor="White" HorizontalOptions="FillAndExpand" Clicked="OnStopTunnel" />
     </StackLayout>
 </ContentPage>
